feat: atualiza flags de documento e cartao

--- a/FrotiX.Site.OLD/Pages/Viagens/Index.cshtml
+++ b/FrotiX.Site.OLD/Pages/Viagens/Index.cshtml
@@ -953,7 +953,7 @@
 						<div class="col-md-3">
 							<label class="ftx-label">
 								<i class="fa-duotone fa-file-check"></i>
-								Status Documento
+								Documento Entregue
 							</label>
 							<div class="form-check form-switch mt-2">
 								<input class="form-check-input" type="checkbox" id="chkStatusDocumento" checked />
@@ -963,7 +963,7 @@
 						<div class="col-md-3">
 							<label class="ftx-label">
 								<i class="fa-duotone fa-credit-card"></i>
-								Cartão Abastecimento
+								Cartão Abastecimento Entregue
 							</label>
 							<div class="form-check form-switch mt-2">
 								<input class="form-check-input" type="checkbox" id="chkStatusCartaoAbastecimento" checked />
