--- a/FrotiX.Site.OLD/Pages/Agenda/Index.cshtml
+++ b/FrotiX.Site.OLD/Pages/Agenda/Index.cshtml
@@ -167,6 +167,9 @@
     <link rel="stylesheet" href="~/css/modal-viagens-consolidado.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/modal-viagens-headers.css" asp-append-version="true" />
 
+    <!-- Fuzzy Validator CSS -->
+    <link rel="stylesheet" href="~/css/kendo-fuzzy-validator.css" asp-append-version="true" />
+
     <!-- FullCalendar 6.1.15 -->
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
     @Html.Raw("<script src='https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.15/locales-all.global.min.js'></script>")
@@ -1014,11 +1017,8 @@
                                                 style="font-size: 1.25em; cursor: pointer;"></i>
                                         </div>
                                         <!-- allowCustom="true" permite digitação livre -->
-                                        <ejs-combobox id="cmbOrigem" dataSource="@ViewData["ListaOrigem"]"
-                                            placeholder="Selecione ou digite a origem" allowFiltering="true"
-                                            filterType="Contains" allowCustom="true" popupHeight="220px"
-                                            data-ejtip="Origem não está na lista? Consulte direito antes de cadastrar!">
-                                        </ejs-combobox>
+                                        <input id="cmbOrigem" style="width: 100%;"
+                                            data-ejtip="Origem não está na lista? Consulte direito antes de cadastrar!" />
                                     </div>
                                 </div>
                             </div>
@@ -1039,11 +1039,8 @@
                                                 style="font-size: 1.25em; cursor: pointer;"></i>
                                         </div>
                                         <!-- allowCustom="true" permite digitação livre -->
-                                        <ejs-combobox id="cmbDestino" dataSource="@ViewData["ListaDestino"]"
-                                            placeholder="Selecione ou digite o destino" allowFiltering="true"
-                                            filterType="Contains" allowCustom="true" popupHeight="220px"
-                                            data-ejtip="Destino não está na lista? Consulte direito antes de cadastrar!">
-                                        </ejs-combobox>
+                                        <input id="cmbDestino" style="width: 100%;"
+                                            data-ejtip="Destino não está na lista? Consulte direito antes de cadastrar!" />
                                     </div>
                                 </div>
                             </div>
@@ -1906,6 +1903,8 @@
         window.dataFinalidade = @Html.Raw(Json.Serialize(ViewData["dataFinalidade"]));
         window.dataPeriodo = @Html.Raw(Json.Serialize(ViewData["dataPeriodo"]));
         window.dataPeriodos = @Html.Raw(Json.Serialize(ViewData["dataPeriodos"]));
+        window.dataOrigem = @Html.Raw(Json.Serialize(ViewData["ListaOrigem"]));
+        window.dataDestino = @Html.Raw(Json.Serialize(ViewData["ListaDestino"]));
 
         window.FrotiXConfig = window.FrotiXConfig || {};
         window.FrotiXConfig.recorrencia = {
@@ -1984,6 +1983,11 @@
        VALIDAÇÃO IA - Validador Evolutivo de Finalização
        ============================================ *@
     <script src="~/js/validacao/ValidadorFinalizacaoIA.js" asp-append-version="true"></script>
+
+    @* ============================================
+       FUZZY VALIDATOR - Validação de Duplicatas Origem/Destino
+       ============================================ *@
+    <script src="~/js/viagens/kendo-fuzzy-validator.js" asp-append-version="true"></script>
 
     @* ============================================
    FUNÇÃO CALLBACK DO TREEVIEW DE SETORES
